# Spacetraders-Zero

./: .gitignore  .windsurfrules  MANIFEST.in  README.md  config.json  conftest.py  constraints.txt  dev-requirements.in  dev-requirements.txt  knowledge.md  mypy.ini  pyproject.toml  register_agent.py  requirements.in  requirements.txt  setup.cfg  setup.py  test_gameplay.py  test_mining.py  test_selling.py  test_trader.py
.github/ISSUE_TEMPLATE/: failing_tests.md
.github/workflows/: python-app.yml  refactored_validate_simplified.yml  validate.yml  validate_simplified.yml  workflow.yml
src/: config.py  main.py  persistence.py  persistence.pyi
src/agents/: run.py  trader.py
src/api/: cache.py  circuit_breaker.py  client.py  client.pyi  rate_limiter.py  request_handler.py
src/spacetraders_zero.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/spacetraders_zero/agents/: trader.py
src/spacetraders_zero/api/: client.py
src/spacetraders_zero/ui/: main_window.py
src/ui/: main_window.py
tests/: conftest.py  test_client.py  test_client_logging.py  test_client_optimizations.py  test_config.py  test_gameplay.py  test_mining.py  test_persistence.py  test_selling.py  test_trader.py
