[build-system]
requires = [
    "setuptools>=69.0.2", 
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "spacetraders-zero"
version = "0.1.0"
description = "A Python client for SpaceTraders.io"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Joshua Orink", email = "joshuaorink@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.5.2,<3.0.0",  
    "python-dotenv>=1.0.0",
    "responses>=0.24.1",
    "aiohttp>=3.9.1",
]

[tool.setuptools]
packages = ["src"]
package-data = {"src" = ["py.typed"]}
package-dir = {"": "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
