[metadata]
name = spacetraders-zero
version = 0.1.0
description = A Python client for SpaceTraders API
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.12

[options.packages.find]
where = src
