[metadata]
name = spacetraders-zero
version = 0.1.0
description = A Python client for SpaceTraders API
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.12

[options.packages.find]
where = src

[mypy]
python_version = 3.12
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_optional = True

[mypy.plugins.django.*]
init_typed = True

[mypy-persistence.*]
ignore_missing_imports = True
